frontend/src/app/components/basic/team-list/team-list.component.scss
.team-list {
  display: flex;
  flex-direction: column;
  height: auto;
  overflow: auto;
  min-height: 460px;
  margin-top: 1em;
  width: auto;
  padding: 1rem;
  max-height: 70vh;
}

.team-list.list-horizontal {
  display: flex;
  flex-direction: row;
  max-width: 55vw;
  min-height: 80px;
  height: 150px;
}

.team-list .list-horizontal {
  width: 100%;
  display: flex;
  flex-direction: row;
  min-height: 60px;
  height: 10vh;
}

.mat-card-header .mat-card-title {
  font-size: 16px;
}

.mat-card-header .mat-card-subtitle {
  font-size: 12px;
}

.team-grid {
  gap: 1rem;
  display: flex;
  flex-direction: column;
}

.team-grid.grid {
  display: grid;
  grid-template-columns: 50% 50%;
  grid-template-rows: auto auto;
  max-height: 33vh;
  padding: 1rem;
  gap: 1rem;
}

@media screen and (max-height: 800px) {
  .filter {
    display: none !important;
  }
}


@media screen and (max-width: 600px) {
  .team-grid.grid {
    grid-template-columns: 100%;
    grid-template-rows: auto;
  }
}

